<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".presentation.catalog.ui.CatalogFragment">

    <TextView
        android:id="@+id/tv_title"
        style="@style/Title1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/catalog"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/ll_sorting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_margin"
        android:layout_marginTop="@dimen/sorting_top_margin"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title">

        <ImageView
            android:id="@+id/iv_sorting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/sorting_description"
            android:src="@drawable/ic_sorting"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title" />

        <TextView
            android:id="@+id/tv_sorting"
            style="@style/Title4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/half_default_margin"
            android:paddingStart="0dp"
            android:paddingEnd="@dimen/big_margin"
            android:text="@string/sorting_popular"
            app:drawableEndCompat="@drawable/ic_dropdown"
            app:layout_constraintBottom_toBottomOf="@+id/iv_sorting"
            app:layout_constraintStart_toEndOf="@id/iv_sorting"
            app:layout_constraintTop_toTopOf="@+id/iv_sorting" />
    </LinearLayout>

    <ImageView
        android:id="@+id/iv_filter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/filter_description"
        android:src="@drawable/ic_filter"
        app:layout_constraintBottom_toBottomOf="@+id/tv_filter"
        app:layout_constraintEnd_toStartOf="@+id/tv_filter"
        app:layout_constraintTop_toTopOf="@+id/tv_filter" />

    <TextView
        android:id="@+id/tv_filter"
        style="@style/Title4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/half_default_margin"
        android:text="@string/filters"
        app:layout_constraintBottom_toBottomOf="@+id/ll_sorting"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/ll_sorting" />

    <HorizontalScrollView
        android:id="@+id/scroll_chip_filter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_margin"
        android:layout_marginTop="@dimen/default_margin"
        android:scrollbars="none"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_sorting">

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chip_group_filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:selectionRequired="true"
            app:singleLine="true"
            app:singleSelection="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_see_all"
                style="@style/CustomChip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/see_all"
                app:closeIconEnabled="false" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_face"
                style="@style/CustomChip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/face"
                app:closeIconEnabled="false" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_body"
                style="@style/CustomChip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/body"
                app:closeIconEnabled="false" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_suntan"
                style="@style/CustomChip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/suntan"
                app:closeIconEnabled="false" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_mask"
                style="@style/CustomChip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/mask"
                app:closeIconEnabled="false" />


        </com.google.android.material.chip.ChipGroup>
    </HorizontalScrollView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_catalog"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/default_margin"
        android:layout_marginTop="@dimen/double_default_margin"
        android:visibility="gone"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/scroll_chip_filter"
        app:spanCount="2"
        tools:itemCount="10"
        tools:listitem="@layout/catalog_item" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="@dimen/progress_bar_size"
        android:layout_height="@dimen/progress_bar_size"
        android:indeterminateTint="@color/pink"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/scroll_chip_filter" />

    <TextView
        android:id="@+id/tv_error"
        style="@style/Title1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="14dp"
        android:layout_marginBottom="10dp"
        android:drawablePadding="@dimen/default_margin"
        android:fontFamily="@font/sf_ui_medium"
        android:paddingHorizontal="@dimen/double_default_margin"
        android:text="@string/error_no_data"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:visibility="gone"
        app:drawableTopCompat="@drawable/ic_error"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/scroll_chip_filter"
        tools:visibility="visible" />

    <Button
        android:id="@+id/btn_update"
        style="@style/Widget.Material3.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update"
        android:textColor="@color/orange"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_error" />

    <TextView
        android:id="@+id/tv_filter_error"
        style="@style/Title1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="14dp"
        android:layout_marginBottom="10dp"
        android:drawablePadding="@dimen/default_margin"
        android:fontFamily="@font/sf_ui_medium"
        android:paddingHorizontal="@dimen/double_default_margin"
        android:text="@string/error_too_much_filter"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:visibility="gone"
        app:drawableTopCompat="@drawable/ic_error"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/scroll_chip_filter"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>