<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".presentation.profile.ui.ProfileFragment">

    <TextView
        android:id="@+id/tv_title"
        style="@style/Title1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/personal_account"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/ll_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/default_margin"
        android:layout_marginTop="34dp"
        android:background="@drawable/rounder_background"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title">

        <ImageView
            android:id="@+id/iv_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/half_default_margin"
            android:contentDescription="@string/description_profile"
            android:src="@drawable/ic_profile" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="7dp"
            android:layout_marginStart="@dimen/default_margin"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_user_name"
                style="@style/Title2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_mock"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_user_phone"
                style="@style/Caption1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone_mock"
                android:textColor="@color/grey"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </LinearLayout>

        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <ImageButton
            android:id="@+id/ib_exit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/half_default_margin"
            android:layout_marginEnd="@dimen/half_default_margin"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/description_profile"
            android:src="@drawable/ic_exit" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_favorite"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/default_margin"
        android:layout_marginTop="24dp"
        android:background="@drawable/rounder_background"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_name">

        <ImageView
            android:id="@+id/iv_favorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/half_default_margin"
            android:contentDescription="@string/description_profile"
            android:src="@drawable/ic_like" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="7dp"
            android:layout_marginStart="@dimen/default_margin"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_favorite"
                style="@style/Title2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/favorite"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_favorite_number"
                style="@style/Caption1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/favorite_number"
                android:textColor="@color/grey"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </LinearLayout>

        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/half_default_margin"
            android:layout_marginEnd="@dimen/half_default_margin"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/description_profile"
            android:src="@drawable/ic_forward" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_stores"
        style="@style/TextViewProfileMenuItem"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/stores"
        app:drawableEndCompat="@drawable/ic_forward"
        app:drawableStartCompat="@drawable/ic_store"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_favorite" />

    <TextView
        android:id="@+id/tv_feedback"
        style="@style/TextViewProfileMenuItem"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/feedback"
        app:drawableEndCompat="@drawable/ic_forward"
        app:drawableStartCompat="@drawable/ic_feedback"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_stores" />

    <TextView
        android:id="@+id/tv_offer"
        style="@style/TextViewProfileMenuItem"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/offer"
        app:drawableEndCompat="@drawable/ic_forward"
        app:drawableStartCompat="@drawable/ic_offer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_feedback" />

    <TextView
        android:id="@+id/tv_return"
        style="@style/TextViewProfileMenuItem"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/returns"
        app:drawableEndCompat="@drawable/ic_forward"
        app:drawableStartCompat="@drawable/ic_return"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_offer" />

    <Button
        android:id="@+id/btn_exit"
        style="@style/DefaultButton"
        android:layout_width="match_parent"
        android:layout_height="@dimen/default_button_size"
        android:layout_marginHorizontal="@dimen/default_margin"
        android:layout_marginBottom="32dp"
        android:text="@string/exit"
        android:textColor="@color/black"
        app:backgroundTint="@color/button_color_clicked_grey"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>